fix(mc and open house): fix z-Index  (#3576)

--- a/app/styles/components/modules/template-builder.scss
+++ b/app/styles/components/modules/template-builder.scss
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1003;
+  z-index: 100;
 
   .gjs-pn-commands {
     display: none;
